# lrs_fei

./: .gitignore  drone.txt  inflated_map.txt  init.sh  mav.parm  mav.tlog  mav.tlog.raw  original_map.txt  point.txt  projected_map.txt
FEIStyle-master/: FEIstyle.cls  biblo.md  example.blg  example.tex
FEIStyle-master/includes/: conclusion.tex  core.tex  glossary.tex
paths/: path_map_0.txt  path_map_1.txt  path_map_2.txt  path_map_3.txt  path_map_4.txt  path_map_5.txt  path_map_6.txt  path_map_7.txt
sliced/: slice_map_0.txt  slice_map_1.txt  slice_map_10.txt  slice_map_11.txt  slice_map_12.txt  slice_map_13.txt  slice_map_14.txt  slice_map_2.txt  slice_map_3.txt  slice_map_4.txt  slice_map_5.txt  slice_map_6.txt  slice_map_7.txt  slice_map_8.txt  slice_map_9.txt
src/LRS-FEI/: README.md  mission_1_all.csv  mission_3_all.csv  test.csv
src/LRS-FEI/maps/FEI_LRS_2D/: map1.yaml  map_075.pgm
src/LRS-FEI/worlds/: my_fei_lrs_gazebo.world
src/template_drone_control/: CMakeCache.txt  CMakeLists.txt  package.xml
src/template_drone_control/src/: drone_navigation.cpp  drone_navigation.hpp  flood_fill_node.cpp  load_pcd_node.cpp  load_pcd_node.hpp  mission_task_server.cpp  pcd_loader.cpp  pgm_map_loader.cpp  pgm_map_loader.hpp  pointcloud_subscriber.cpp  pointcloud_subscriber.hpp  template_drone_control_node.cpp
